--- a/app/src/main/res/layout/answer_image_selected_view.xml
+++ b/app/src/main/res/layout/answer_image_selected_view.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="😍"
-        android:textColor="#7884a5"
+        android:textColor="@color/grey"
         android:textSize="@dimen/emoji_normal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
