--- a/app/src/main/res/layout/transaction_row_layout.xml
+++ b/app/src/main/res/layout/transaction_row_layout.xml
@@ -56,8 +56,9 @@
 
         <TextView
             android:id="@+id/title"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
             android:layout_marginStart="18dp"
             android:layout_marginTop="14dp"
             android:fontFamily="sans-serif"
@@ -65,6 +66,7 @@
             android:textColor="#5c6786"
             android:textSize="18sp"
             android:textStyle="normal"
+            app:layout_constraintEnd_toStartOf="@+id/balance_update"
             app:layout_constraintStart_toEndOf="@+id/provider_icon"
             app:layout_constraintTop_toTopOf="parent" />
 
