--- a/app/src/main/res/layout/earn_tab.xml
+++ b/app/src/main/res/layout/earn_tab.xml
@@ -211,7 +211,7 @@
             android:layout_marginTop="5dp"
             android:fontFamily="sans-serif"
             android:gravity="center_horizontal"
-            android:text="@{@string/kin_reward(model.kinReward)}"
+            android:text="@{model.isQuiz ? @string/kin_reward_upto(model.kinReward) : @string/kin_reward(model.kinReward)}"
             android:textColor="#7884a5"
             android:textSize="16sp"
             android:visibility="@{model.getShouldShowTask}"
