--- a/app/src/main/res/layout/question_dual_image_fragment.xml
+++ b/app/src/main/res/layout/question_dual_image_fragment.xml
@@ -15,7 +15,8 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:splitMotionEvents="false">
 
         <TextView
             android:id="@+id/question"
