--- a/app/src/main/res/drawable/button_send_p2p_font_color.xml
+++ b/app/src/main/res/drawable/button_send_p2p_font_color.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-        <item android:color="@color/button_send_p2p_disable_font_color" android:state_enabled="false"/>
+        <item android:color="@color/grey_dark_medium" android:state_enabled="false"/>
         <item android:color="@color/white" android:state_pressed="true" />
         <item android:color="@color/button_send_p2p_font_color_normal"  />
 </selector>
