--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,7 +18,7 @@
     <color name="deep_blue">#033cc5</color>
     <color name="button_blue">#047cfc</color>
     <color name="button_blue_selected">#047cfc</color>
-    <color name="button_blue_disable">#efeef0</color>
+    <color name="grey_light">#efeef0</color>
     <color name="button_blue_font_color">#fff</color>
     <color name="button_blue_disable_font_color">#fff</color>
     <color name="grey_delimiter_line_color">#d2d7e1</color>
@@ -33,7 +33,7 @@
     <color name="auth_next_bg_color">#fff</color>
     <color name="auth_next_bg_color_clicked">#7884a5</color>
     <color name="button_send_p2p_font_color_normal">#047cfc</color>
-    <color name="button_send_p2p_disable_font_color">#d7dce9</color>
+    <color name="grey_dark_medium">#d7dce9</color>
     <color name="button_send_p2p_bg_color_normal">#fff</color>
     <color name="button_send_p2p_bg_color_selected">#047cfc</color>
     <color name="konfetti1">#01ff1c</color>
@@ -45,7 +45,7 @@
     <color name="konfetti7">#82ffee</color>
     <color name="green_correct">#87e620</color>
     <color name="red_wrong">#fc624f</color>
-
+    <color name="grey_settings_header">#f7f7f7</color>
     <color name="btn_stroke_grey">#d7dce9</color>
     <color name="blue_selected_image">#80047cfc</color>
 
