--- a/app/src/main/res/layout/info_tab.xml
+++ b/app/src/main/res/layout/info_tab.xml
@@ -35,6 +35,7 @@
             android:id="@+id/security_header"
             style="@style/settingHeader"
             android:text="@string/security"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -44,6 +45,7 @@
             android:id="@+id/security_view"
             style="@style/settingView"
             android:onClick="@{model::onStartBackupClicked}"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -52,6 +54,7 @@
         <View
             android:id="@+id/delimeter0"
             style="@style/settingViewDelimiter"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -79,6 +82,7 @@
             android:id="@+id/wallet_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@+id/security_view"
             app:layout_constraintEnd_toStartOf="@+id/icon_guide"
             app:layout_constraintStart_toStartOf="parent"
@@ -109,6 +113,7 @@
             style="@style/settingTitle"
             android:layout_marginStart="6dp"
             android:text="@string/wallet_backup"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@+id/security_view"
             app:layout_constraintStart_toStartOf="@+id/icon_guide"
             app:layout_constraintTop_toTopOf="@+id/security_view" />
@@ -127,7 +132,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="23dp"
-            android:visibility="@{!model.isBackedUp()}"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@+id/security_view"
             app:layout_constraintEnd_toEndOf="@+id/security_view"
             app:layout_constraintTop_toTopOf="@+id/security_view"
@@ -139,7 +144,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="23dp"
-            android:visibility="@{model.isBackedUp()}"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@+id/security_view"
             app:layout_constraintEnd_toEndOf="@+id/security_view"
             app:layout_constraintTop_toTopOf="@+id/security_view"
