--- a/app/src/main/res/layout/info_tab.xml
+++ b/app/src/main/res/layout/info_tab.xml
@@ -35,7 +35,6 @@
             android:id="@+id/security_header"
             style="@style/settingHeader"
             android:text="@string/security"
-            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -45,7 +44,6 @@
             android:id="@+id/security_view"
             style="@style/settingView"
             android:onClick="@{model::onStartBackupClicked}"
-            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -54,7 +52,6 @@
         <View
             android:id="@+id/delimeter0"
             style="@style/settingViewDelimiter"
-            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -82,7 +79,6 @@
             android:id="@+id/wallet_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@+id/security_view"
             app:layout_constraintEnd_toStartOf="@+id/icon_guide"
             app:layout_constraintStart_toStartOf="parent"
@@ -113,7 +109,6 @@
             style="@style/settingTitle"
             android:layout_marginStart="6dp"
             android:text="@string/wallet_backup"
-            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@+id/security_view"
             app:layout_constraintStart_toStartOf="@+id/icon_guide"
             app:layout_constraintTop_toTopOf="@+id/security_view" />
@@ -132,7 +127,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="23dp"
-            android:visibility="gone"
+            android:visibility="@{!model.isBackedUp()}"
             app:layout_constraintBottom_toBottomOf="@+id/security_view"
             app:layout_constraintEnd_toEndOf="@+id/security_view"
             app:layout_constraintTop_toTopOf="@+id/security_view"
@@ -144,7 +139,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="23dp"
-            android:visibility="gone"
+            android:visibility="@{model.isBackedUp()}"
             app:layout_constraintBottom_toBottomOf="@+id/security_view"
             app:layout_constraintEnd_toEndOf="@+id/security_view"
             app:layout_constraintTop_toTopOf="@+id/security_view"
