--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="balance_text_color">#FFF</color>
     <color name="question_text_color">#047cfc</color>
     <color name="white">#FFF</color>
+    <color name="blue">#047cfc</color>
     <color name="answer_stroke">#d2d7e1</color>
     <color name="blue_light">#0e6ddc</color>
     <color name="blue_sky">#48a1fc</color>
