--- a/app/src/main/res/layout/backup_confirm.xml
+++ b/app/src/main/res/layout/backup_confirm.xml
@@ -79,7 +79,7 @@
             android:id="@+id/next"
             android:layout_width="0dp"
             android:layout_height="@dimen/auth_phone_next_height"
-            android:enabled="true"
+            android:clickable="@{model.isClickable()}"
             android:fontFamily="sans-serif"
             android:gravity="center"
             android:text="@string/confirm"
