--- a/app/src/main/res/layout/backup_summery.xml
+++ b/app/src/main/res/layout/backup_summery.xml
@@ -60,6 +60,7 @@
             android:layout_width="0dp"
             android:layout_height="@dimen/auth_phone_next_height"
             android:enabled="true"
+            android:clickable="@{model.isClickable()}"
             android:fontFamily="sans-serif"
             android:gravity="center"
             android:text="@string/next"
