--- a/app/src/main/res/layout/backup_summary.xml
+++ b/app/src/main/res/layout/backup_summary.xml
@@ -84,7 +84,7 @@
 
 
         <ScrollView
-            android:id="@+id/scrollview"
+            android:id="@+id/scrollView"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginBottom="24dp"
