--- a/app/src/main/res/layout/welcomeback_restore_wallet_fragment.xml
+++ b/app/src/main/res/layout/welcomeback_restore_wallet_fragment.xml
@@ -1,39 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
+
+    <ImageView
         android:id="@+id/welcome_back"
-        android:layout_width="264dp"
-        android:layout_height="53dp"
-        android:layout_marginTop="69dp"
-        android:fontFamily="sans-serif"
-        android:gravity="center_vertical"
-        android:lineSpacingExtra="31sp"
-        android:text="@string/welcome_back"
-        android:textColor="#047cfc"
-        android:textSize="22sp"
-        android:textStyle="normal"
+        android:layout_width="wrap_content"
+        android:layout_height="200dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/restore"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
-    <TextView
-        android:id="@+id/wallet_identified_string"
-        android:layout_width="264dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="6dp"
-        android:fontFamily="sans-serif"
-        android:gravity="center_vertical"
-        android:lineSpacingExtra="6sp"
-        android:text="@string/wallet_identified_string"
-        android:textColor="#7884a5"
-        android:textSize="16sp"
-        android:textStyle="normal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/welcome_back"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/welcome_illus" />
+
     <TextView
         android:id="@+id/restore"
         style="@style/Button.Blue"
