--- a/app/src/main/res/layout/backup_question_spinner_item_layout.xml
+++ b/app/src/main/res/layout/backup_question_spinner_item_layout.xml
@@ -9,20 +9,22 @@
 
     <TextView
         android:id="@+id/question"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="40dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="18dp"
         android:layout_marginStart="18dp"
         android:layout_marginTop="8dp"
         android:fontFamily="sans-serif"
         android:gravity="center_vertical"
-        tools:text="Some Question"
         android:textColor="@color/grey"
         android:textSize="14sp"
         android:textStyle="normal"
         app:layout_constraintBottom_toTopOf="@+id/delim"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Some Question" />
 
     <View
         android:id="@+id/delim"
