--- a/app/src/main/res/layout/peers_send_kin_layout.xml
+++ b/app/src/main/res/layout/peers_send_kin_layout.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    >
+    xmlns:tools="http://schemas.android.com/tools">
+
     <data>
+
         <variable
             name="model"
-            type="org.kinecosystem.kinit.viewmodel.spend.Peer2PeerViewModel"/>
+            type="org.kinecosystem.kinit.viewmodel.spend.Peer2PeerViewModel" />
     </data>
+
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
-        >
+        android:background="@color/white">
 
 
         <View
@@ -23,7 +24,7 @@
             android:background="@drawable/spend_peer2peer_detail_top_gradient"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/close_x"
@@ -33,11 +34,10 @@
             android:scaleType="center"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/close_white"/>
+            app:srcCompat="@drawable/close_white" />
 
         <EditText
             android:id="@+id/amount"
-            android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
@@ -55,12 +55,14 @@
             android:textColor="#047cfc"
             android:textColorHint="#047cfc"
             android:textSize="70sp"
+            android:textStyle="bold"
             app:addTextChangedListener="@{model.textWatcher}"
             app:layout_constraintBottom_toTopOf="@+id/send"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/name"/>
+            app:layout_constraintTop_toBottomOf="@+id/name" />
+
         <ImageView
             android:id="@+id/kin_coin"
             android:layout_width="wrap_content"
@@ -70,33 +72,35 @@
             android:baselineAlignBottom="@+id/amount"
             app:layout_constraintBottom_toBottomOf="@+id/amount"
             app:layout_constraintEnd_toStartOf="@+id/amount"
-            app:srcCompat="@drawable/letter_bdark"/>
+            app:srcCompat="@drawable/letter_bdark" />
 
         <TextView
             android:id="@+id/to"
-            android:textStyle="normal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="11dp"
             android:layout_marginStart="30dp"
+            android:layout_marginTop="11dp"
             android:fontFamily="sans-serif"
             android:text="@string/to"
             android:textColor="#7884a5"
+            android:textStyle="normal"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/gradient"/>
+            app:layout_constraintTop_toBottomOf="@+id/gradient" />
+
         <TextView
             android:id="@+id/name"
-            android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="3dp"
             android:layout_marginStart="30dp"
+            android:layout_marginTop="3dp"
             android:fontFamily="sans-serif"
             android:text="@{model.name}"
             android:textColor="#7884a5"
             android:textSize="16sp"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/to"/>
+            app:layout_constraintTop_toBottomOf="@+id/to" />
+
         <TextView
             android:id="@+id/change_contact"
             android:layout_width="wrap_content"
@@ -108,7 +112,8 @@
             android:text="@string/change"
             app:layout_constraintBottom_toBottomOf="@+id/name"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/to"/>
+            app:layout_constraintTop_toTopOf="@+id/to" />
+
         <View
             android:id="@+id/delim"
             android:layout_width="0dp"
@@ -117,13 +122,14 @@
             app:layout_constraintBottom_toTopOf="@+id/send"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent" />
+
         <TextView
             android:id="@+id/send"
-            android:textStyle="normal"
             android:layout_width="0dp"
             android:layout_height="68dp"
             android:background="@drawable/button_send_p2p_bg_color"
+            android:clickable="@{model.isClickable}"
             android:enabled="@{model.sendEnabled}"
             android:fontFamily="sans-serif"
             android:gravity="center"
@@ -132,10 +138,12 @@
             android:text="@string/send_kin"
             android:textColor="@drawable/button_send_p2p_font_color"
             android:textSize="18sp"
+            android:textStyle="normal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent" />
+
         <View
             android:id="@+id/sending_container"
             android:layout_width="wrap_content"
@@ -145,10 +153,10 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent" />
+
         <TextView
             android:id="@+id/sending_title"
-            android:textStyle="normal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="23dp"
@@ -158,10 +166,12 @@
             android:text="Sending Kin"
             android:textColor="#ffff"
             android:textSize="18sp"
+            android:textStyle="normal"
             app:animatedFadeIn="@{model.sendingTransaction}"
             app:layout_constraintBottom_toBottomOf="@+id/sending_container"
             app:layout_constraintStart_toStartOf="@+id/sending_container"
-            app:layout_constraintTop_toTopOf="@+id/sending_container"/>
+            app:layout_constraintTop_toTopOf="@+id/sending_container" />
+
         <ProgressBar
             android:id="@+id/progressBar"
             style="?android:attr/progressBarStyle"
@@ -172,7 +182,8 @@
             app:animatedFadeIn="@{model.sendingTransaction}"
             app:layout_constraintBottom_toBottomOf="@+id/sending_container"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/sending_container"/>
+            app:layout_constraintTop_toTopOf="@+id/sending_container" />
+
         <View
             android:id="@+id/transaction_complete_bg"
             android:layout_width="match_parent"
@@ -184,7 +195,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
+
         <ImageView
             android:id="@+id/transaction_complete_image"
             android:layout_width="wrap_content"
@@ -197,10 +209,10 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/circle_tik"/>
+            app:srcCompat="@drawable/circle_tik" />
+
         <TextView
             android:id="@+id/transaction_complete_title"
-            android:textStyle="normal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
@@ -210,18 +222,19 @@
             android:text="@string/transaction_completed"
             android:textColor="#ffffff"
             android:textSize="20sp"
+            android:textStyle="normal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/transaction_complete_image"/>
+            app:layout_constraintTop_toBottomOf="@+id/transaction_complete_image" />
+
         <TextView
             android:id="@+id/transaction_complete_subtitle"
-            android:textStyle="normal"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="23dp"
-            android:layout_marginStart="60dp"
             android:layout_marginEnd="60dp"
+            android:layout_marginStart="60dp"
+            android:layout_marginTop="23dp"
             android:alpha="0"
             android:clickable="false"
             android:fontFamily="sans-serif"
@@ -230,9 +243,10 @@
             android:text="@{@string/transaction_complete_subtitle(model.amount)}"
             android:textColor="#ffffff"
             android:textSize="14sp"
+            android:textStyle="normal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/transaction_complete_title"/>
+            app:layout_constraintTop_toBottomOf="@+id/transaction_complete_title" />
     </android.support.constraint.ConstraintLayout>
 </layout>
